CMAKE_MINIMUM_REQUIRED(VERSION 3.30)

PROJECT(dmb)

SET(APP dmb)

FILE(GLOB SOURCES "*.cxx" "*.hpp")

set( CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG -std=c++11 -Ofast -Wl,-s")

set( CMAKE_CXX_FLAGS_DEBUG "-DDEBUG  -std=c++11 -O0 -ggdb")

set( CMAKE_INSTALL_PREFIX "/usr")

FIND_PACKAGE(FLTK REQUIRED)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}")

FIND_PACKAGE(Cairo REQUIRED)

INCLUDE_DIRECTORIES(${CAIRO_INCLUDE_DIRS})

ADD_EXECUTABLE(${APP} ${SOURCES})

TARGET_LINK_LIBRARIES(${APP} -lportaudio -lpthread -lcairo -lrt -lsndfile ${CAIRO_LIBRARIES} ${FLTK_LIBRARIES})

INSTALL ( TARGETS "${APP}" 
    DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")

INSTALL ( FILES "${CMAKE_SOURCE_DIR}/thunar-sendto-dmb.desktop" 
    DESTINATION "/usr/share/Thunar/sendto/")

